--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,5 @@
 ---
-title: Page1
+title: Homepage
 
 ---
 
@@ -224,7 +224,7 @@ title: Page1
 						.recommend_text
 							Because you like:
 						.post_title_tiny
-							17 Governors Agree to Pursue Clean Energy Goals 
+							17 Governors Agree to Pursue Clean Energy 
 			.card_tiny_wrapper
 				.card_tiny
 					.card_picBox_tiny
@@ -282,7 +282,7 @@ title: Page1
 									%img(src="/images_s/report/img1.png")
 							.card_tiny_text
 								.post_title_tiny
-									Gravitational Waves Discovered from Colliding Black Holes
+									Gravitational Waves From Black Holes
 							.card_tiny_text_bottom
 								.line_dark_tiny
 								.tag_tiny
@@ -294,7 +294,7 @@ title: Page1
 									%img(src="/images_s/report/img2.png")
 							.card_tiny_text
 								.post_title_tiny
-									Gravitational Waves Are the Ringing of Spacetime
+									Gravitational Waves Are the Ringing of...
 							.card_tiny_text_bottom
 								.line_dark_tiny
 								.tag_tiny
@@ -306,7 +306,7 @@ title: Page1
 									%img(src="/images_s/report/img3.png")
 							.card_tiny_text
 								.post_title_tiny
-									Watch How Gravitational Waves Dance across the…
+									Watch How Gravitational Waves Dance
 							.card_tiny_text_bottom
 								.line_dark_tiny
 								.tag_tiny
@@ -317,15 +317,16 @@ title: Page1
 				%h1 INFOGRAPHIC OF THE WEEK
 			.section_line
 			.card_info_wrapper
-				.text_info_wrapper
-					.topic_info_time
-						By Amanda Montañez on February 17, 2016
-					.topic_info_title
-						The Data, My Friend, Is Blowing in the Wind
-					.topic_info_description
-						Interactive data visualization maps predicted wind speeds around the world
-					.view_more
-						VIEW MORE
+				.card_info
+					.text_info_wrapper
+						.topic_info_time
+							By Amanda Montañez on February 17, 2016
+						.topic_info_title
+							The Data, My Friend, Is Blowing in the Wind
+						.topic_info_description
+							Interactive data visualization maps predicted wind speeds around the world
+						.view_more
+							VIEW MORE
 	.shelf_wrapper
 		.index_row
 			.section_title
