--- a/source/index2.html.haml
+++ b/source/index2.html.haml
@@ -1,86 +1,502 @@
 ---
-title: Page1
+title: Inner Page
 
 ---
 
 
 
-
 .main
-	.index2_promoHeader
-		%img.gameOfThrones(src="/images/index2/index2_header.jpg")
-		.index2_page2_row
-			%ul.title
-				%li ARTICLES
-				%li EPISODES
-				%li CAST & CREW
-		.index2_wrapper
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/1.jpg")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/2.jpg")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/3.jpg")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/4.png")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/5.jpg")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
-			.column
-				.post-module
-					.thumbnail
-						%img(src="/images/index2/6.jpg")
-					.post-content
-						.title
-							Game Of Thrones
-						.sub_title
-							Subtitle
-						.description
-							George R.R. Martin's best-selling book series "A Song of Ice and Fire" is brought to the screen as HBO sinks its considerable storytelling teeth into the medieval fantasy epic.
+	.top_wrapper
+		%img.topBG(src="/images_s/2/top_bg.jpg")
+		.top_category_title
+			[THE SCIENCES]
+		.top_info_text
+			2134 Documents Archived Since 1845
+	.sub_title
+		%ul.title
+			%li.1st All
+			%li Arts & Culture
+			%li Biology
+			%li Chemistry
+			%li Evolution
+			%li Math
+			%li Physics
+			%li Policy & Ethics
+			%li Space
+	.shelf_wrapper
+		.section_title
+			%h1 [ARTICLES]
+		.index_row
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/1.png")
+						.card_small_text
+							.post_title2
+								Science Funders Struggle to Deal with Sexual...
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/2.png")
+						.card_small_text
+							.post_title2
+								India's Government Is Increasingly Antiscience
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/3.png")
+						.card_small_text
+							.post_title2
+								The Truth About Exoplanets
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES - SPACE
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/4.png")
+						.card_small_text
+							.post_title2
+								A Day on Pluto Reconstructed from New Horizons
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+		.index_row
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/5.png")
+						.card_small_text
+							.post_title2
+								Did This Extinct Human Species Commit Homicide?
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/6.png")
+						.card_small_text
+							.post_title2
+								2 Apes Team Up to Kill Another
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/7.png")
+						.card_small_text
+							.post_title2
+								What Sparked the Cambrian Explosion?
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES - EVOLUTION
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/8.png")
+						.card_small_text
+							.post_title2
+								Controversy Swirl around New Human Species
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES - EVOLUTION
+		.index_row
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/9.png")
+						.card_small_text
+							.post_title2
+								Ancient Footprints Discovered in Arizona
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/10.png")
+						.card_small_text
+							.post_title2
+								Octopuses Are Surprisingly Social--and Confrontational
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/11.png")
+						.card_small_text
+							.post_title2
+								The Collective Wisdom of Ants
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES
+			.card_small_wrapper
+				%a{:href => 'post.html'}
+					.card_small
+						.card_picBox_small
+							.card_thumbnail_small
+								%img(src="/images_s/2/12.png")
+						.card_small_text
+							.post_title2
+								Exoplanet Census Suggests Earth Is Special
+						.card_small_text_bottom
+							.line_dark2
+							.tag_big2
+								THE SCIENCES - SPACE
+	.shelf_wrapper
+		.section_title
+			%h1 [VIDEO]
+		.index_row
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/1.png")
+					.card_video_text
+						.video_title
+							How Math is Visual
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/2.png")
+					.card_video_text
+						.video_title
+							Scientists Find New Drug Targets for Psoriasis
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/3.png")
+					.card_video_text
+						.video_title
+							The World's Biggest Volcano Is a Magnetic Mix-Up
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/4.png")
+					.card_video_text
+						.video_title
+							How to Do Quantum Magnetic Levitation at Home
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/5.png")
+					.card_video_text
+						.video_title
+							Why Toothpaste Makes Orange Juice Taste Bad
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/6.png")
+					.card_video_text
+						.video_title
+							Paint Pigment Transformed to Work Wonders
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/7.png")
+					.card_video_text
+						.video_title
+							3-D Printed Trilobites
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/8.png")
+					.card_video_text
+						.video_title
+							How We Are All a Little Nean 
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/9.png")
+					.card_video_text
+						.video_title
+							Migratory Birds May Use Magnetic "GPS"
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/10.png")
+					.card_video_text
+						.video_title
+							One Photon's Journey: Saul Perlmutter
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/11.png")
+					.card_video_text
+						.video_title
+							Bouncing Bots
+			.card_video_wrapper2
+				.card_video
+					.card_picBox_video
+						.card_thumbnail_video
+							.video_play_button
+								.triangle
+									%img(src="/images_s/video/tri.png")
+							%img(src="/images_s/2_video/12.png")
+					.card_video_text
+						.video_title
+							High Heels, High Risk
+	.shelf_wrapper
+		.section_title
+			%h1 [PODCAST]
+		.index_row
+			.podcast_filter_wrapper
+				.podcast_filter
+					.recent_wrapper
+						.filter_text
+							RECENT PODCASTS
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+					.series_wrapper
+						.filter_text
+							SERIES
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+					.topics_wrapper
+						.filter_text
+							TOPICS
+						.arrow_img
+							%img(src="/images_s/video/arrow.png")
+			.podcast_wrapper
+				.podcast_card
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Cutting Carbon Pollution Could Save Health Care $
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 25, 2016 - By Christopher Intagliata
+						.time_podcast
+							|  02:00
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Billion Sun–Bright Events Leave Radio Wave Clues
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 24, 2016 - By Lee Billings
+						.time_podcast
+							|   02:15
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Cyber Thieves Hold Hospital's Data for Ransom
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 23, 2016 - By Larry Greenemeier
+						.time_podcast
+							|   01:25
+			.podcast_wrapper
+				.podcast_card
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Ball Really Looks Bigger to Better Hitters
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 22, 2016 - By Steve Mirsky
+						.time_podcast
+							|  02:03
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							HPV Vaccine Needs to Reach Boys, Too
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 19, 2016 - By Steve Mirsky
+						.time_podcast
+							|   02:16
+			.podcast_wrapper
+				.podcast_card2
+					.podcast_play_button_wrapper
+						.podcast_play_button
+							.triangle_podcast
+								%img(src="/images_s/video/tri.png")
+					.podcast_download_button_wrapper
+						.podcast_download_button
+							.download
+								%img(src="/images_s/video/download.png")
+					.podcast_title_wrapper
+						.podcast_title
+							Mantis Shrimp Shells May Inspire Next-Generation Computer Chips
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							60-SECOND SCIENCE
+					.podcast_tag_wrapper
+						.line_podcast
+						.tag_podcast
+							THE SCIENCES
+					.podcast_time_wrapper
+						.date_podcast
+							February 18, 2016 - By Christopher Intagliata
+						.time_podcast
+							|   01:55
 
-
-			
+		
