--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -4,23 +4,30 @@
 			.logo
 				%ul.title
 					%li 
-						%img(src="/images_s/header/logo.png")
+						%a{:href => 'index.html'}
+							%img(src="/images_s/header/logo.png")
 			.navRow
 				%ul.title
 					%li
-						%a{:href => ''} THE SCIENCES
-					%li MIND
-					%li HEALTH
-					%li TECH
-					%li SUSTAINABILITY
-					%li EDUCATION
+						%a{:href => 'index2.html'} THE SCIENCES
+					%li
+						%a{:href => 'index2.html'} MIND
+					%li
+						%a{:href => 'index2.html'} HEALTH
+					%li
+						%a{:href => 'index2.html'} TECH
+					%li
+						%a{:href => 'index2.html'} SUSTAINABILITY
+					%li
+						%a{:href => 'index2.html'} EDUCATION
 					%li 
-						%a{:href => ''} VIDEO
+						%a{:href => 'video.html'} VIDEO
 					%li 
-						%a{:href => ''} PODCASTS
+						%a{:href => 'podcasts.html'} PODCASTS
 					%li 
 						%a{:href => ''} BLOGS
-					%li STORE
+					%li 
+						%a{:href => ''} STORE
 					%li 
 						%img(src="/images_s/header/search.png")
 
