--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -9,12 +9,18 @@ $bar-blue: #176CB0;
 	height: 100px;
 	background-image: url(../../images_s/header/bg.png);
 	background-size: 100% 100%;
+	@include media($tablet){
+	    height: 70px;
+	};
 }
 
 .wrapper {
 	@include outer-container;
 	height: 100px;
 	padding: 0em 0em 0em 0em;
+	@include media($tablet){
+	    height: 70px;
+	};
 }
 
 .s-header{
@@ -40,14 +46,31 @@ $bar-blue: #176CB0;
 		color: $nav-text;
 		font-weight: 500;
 		letter-spacing: 1px;
+		@include media($desktop-small){
+	    	margin: 0em 1.5em;
+	    	font-size: 11px;
+	  	};
+	  	@include media($tablet){
+	    	display: none;
+	  	};
 	}
-	// @include media($mobile){
- //    	display: none;
- //  };
+		
   	img {
   		width: 13px;
   		height: 13px;
   	}
+  	a {
+	color: $nav-text;
+	padding-bottom: 0.8em;
+	}
+
+	a:hover {
+		color: $text-hover-blue;
+		border-bottom: 0.3em solid $bar-blue;
+		padding-bottom: 1em;
+		transition: color 0.5s ease,
+	                padding-bottom 0.15s ease;
+	}
     transition:all .3s ease-in-out;
 	-webkit-transition:all .3s ease-in-out;
 	-moz-transition:all .3s ease-in-out;
@@ -69,23 +92,13 @@ $bar-blue: #176CB0;
 	}
 }
 
+
 .box{
 	width: 22%;
 	background-color: black;
 }
 
-a {
-	color: $nav-text;
-	padding-bottom: 0.8em;
-}
 
-a:hover {
-	color: $text-hover-blue;
-	border-bottom: 0.3em solid $bar-blue;
-	padding-bottom: 1em;
-	transition: color 0.5s ease,
-                padding-bottom 0.15s ease;
-}
 
 .s-header.off-canvas {
   top: -100px;
