--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -7,5 +7,8 @@
 
 @import "partials/header";
 @import "partials/index";
+@import "partials/index2";
+@import "partials/post";
+@import "partials/video";
 @import "partials/footer";
 
