--- a/source/stylesheets/partials/_footer.scss
+++ b/source/stylesheets/partials/_footer.scss
@@ -8,6 +8,9 @@ $footer_text2: #A7A7A7;
 	background-image: url(../../images_s/footer/bg.png);
 	background-size: 100% 100%;
 	margin-top: 80px;
+	@include media($mobile){
+      height: 180px;
+	}
 }
 
 .col_wrapper {
@@ -15,12 +18,18 @@ $footer_text2: #A7A7A7;
 	position: relative;
 	float: top;
 	height: 165px;
+	@include media($mobile){
+      display: none;
+	}
 }
 
 .col {
 	height: 100px;
 	margin: 36px 0px;
 	@include media($desktop){
+      @include span-columns (3);
+	}
+	@include media($desktop-small){
       @include span-columns (3);
 	}
 }
@@ -31,6 +40,12 @@ $footer_text2: #A7A7A7;
 	font-family: helvetica;
 	text-align: center;
 	margin-bottom: 20px;
+	@include media($tablet){
+      font-size: 12px;
+	}
+	@include media($tablet-portrait){
+      font-size: 11px;
+	}
 }
 
 .divider_line {
@@ -38,6 +53,9 @@ $footer_text2: #A7A7A7;
 	width: 100%;
 	height: 1px;
 	background-color: $podcast_border;
+	@include media($mobile){
+      height: 0px;
+	}
 }
 
 .bottom_text_wrapper1 {
@@ -50,16 +68,22 @@ $footer_text2: #A7A7A7;
 	font-size: 12px;
 	color: $podcast_time;
 	margin: 30px 0px 30px 0px;
+	padding: 0px 30px 0px 30px;
 	@include media($desktop){
-      @include span-columns (10);
+      @include span-columns (12);
 	}
-	@include shift(1);
+	@include media($tablet){
+      font-size: 11px;
+	}
 }
 
 .bottom_text_wrapper2 {
 	@include outer-container;
 	text-align: center;
 	margin-bottom: 30px;
+	@include media($mobile){
+      margin-bottom: 10px;
+	}
 }
 
 .text2_1,
@@ -67,6 +91,9 @@ $footer_text2: #A7A7A7;
 	font-family: georgia;
 	font-size: 12px;
 	color: $footer_text2;
+	@include media($tablet){
+      font-size: 11px;
+	}
 }
 
 .footer_bar {
