--- a/source/stylesheets/partials/_index2.scss
+++ b/source/stylesheets/partials/_index2.scss
@@ -1,211 +1,109 @@
 $card: #0A0B0E;
-$bg: #EFEFEF;
+
 $nav-text: #1C1B1B;
-$section-text: #DB2222;
-$detail-text: #1C1B1B;
-$branding-red: #DB2222;
+
+$detail-text: #4E4E4E;
+$branding-red: #F03A3A;
 $nav-bg: #2F3031;
 $section-text2: #AAAAAA;
 
-
+$card-blue: #04386B;
+$text-hover-blue: #0F538B;
+$bg: #EDEEEF;
+$section-text: #232323;
+$date-text: #999999;
+$title-text: #232323;
+$description-text: #656565;
+$line-dark: #656565;
+$tag-dark: #141414;
+$text-background: #E4E6E8;
+$podcast_play_btn: #D5D6D6;
+$podcast_border: #DEDEDE;
+$podcast_time: #999999;
 
 body {
 	background: $bg;
 	margin: 0 auto;
 }
 
-.index2_promoHeader {
-	padding: 0em 0em 2em 0em;
-	// background-color: $card;
-	// height: 35em;
-}
-
-.index2_wrapper {
-  @include outer-container;
-  margin-top: 40px;
-}
-
-// .index_row2 {
-//   @include row();
-//   padding: 30px 50px;
+// .hero_bar {
+// 	margin-top: -20px;
 // }
 
-.gameOfThrones {
+///////////////////////////topBG
+.top_wrapper {
 	width: 100%;
-	z-index: -1;
-  @include media($mobile){
-      -webkit-transform: scale(2);
-      -moz-transform: scale(2);
-      transform: scale(2);
-  };
-  transition:all .3s ease-in-out;
-  -webkit-transition:all .3s ease-in-out;
-  -moz-transition:all .3s ease-in-out;
-  -ms-transition:all .3s ease-in-out;
-  -o-transition:all .3s ease-in-out;
+	height: 300px;
 }
 
+img.topBG {
+	width: 100%;
+}
 
-.index2_page2_row {
+.top_category_title{
 	position: relative;
-	@include outer-container;
+	text-align: center;
+	font-family: Georgia;
+	font-size: 30px;
+	letter-spacing: 8px;
+	color: white;
+	margin-top: -160px;
+}
+
+.top_info_text{
+	position: relative;
+	text-align: center;
+	font-family: helvetica;
+	font-size: 14px;
+	color: white;
+	font-style: italic;
+	margin-top: 10px;
+}
+
+.sub_title {
 	@include row();
 	display: table;
 	margin: 0 auto;
-	top: -3em;
+	float: center;
+	padding: 0.8em 0em 0em 0em;
 	li {
 		display: inline;
-		margin: 0em 4em;
-		font-size: 0.8em;
-		color: white;
-		font-weight: 600;
+		margin: 0em 2em;
+		font-size: 12px;
+		color: $date-text;
+		letter-spacing: 1px;
+		}
+	li:first-child {
+		color: $section-text;
+		font-style: bold;
+		}
+}
+
+////////////////////////////////////////////////////  card_video2
+.card_video_wrapper2 {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	margin: 60px 0px 0px 0px;
+	@include media($desktop){
+      @include span-columns (3);
+      @include omega (4n);
 	}
-  @include media($mobile){
-      display: none;
-      top: -2em;
-  };
+	@include media($desktop-small){
+      @include span-columns (3);
+      @include omega (4n);
+	}
+
+	@include media($mobile){
+	  margin: 40px 0px 0px 0px;
+      @include span-columns (6);
+      @include omega (2n);
+	}
 }
 
-.blog_1 {
-	margin-top: 4em;
-	padding: 0em 3em;
+.card_video_wrapper2:after {
+	padding-top: 75.99%;
+	display: block;
+	content: '';
 }
 
-h1 {
-	font-size: 1.4em;
-	color: $nav-text;
-	margin-bottom: 1em;
-	font-weight: bold;
-}
-
-h2 {
-	font-size: 1em;
-	color: $nav-text;
-	margin-bottom: 0.2em;
-	font-weight: 500;
-}
-
-////////////////////////////////////////  card
-.post-module {
-  position: relative;
-  z-index: 1;
-  display: block;
-  background: #ffffff;
-  min-width: 270px;
-  height: 400px;
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.3s linear 0s;
-  -moz-transition: all 0.3s linear 0s;
-  -ms-transition: all 0.3s linear 0s;
-  -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-  cursor: pointer;
-}
-
-.post-module:hover,
-.hover {
-  -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.2);
-}
-.post-module:hover .thumbnail img,
-.hover .thumbnail img {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  transform: scale(1.1);
-  opacity: .65;
-}
-.post-module .thumbnail {
-  background: $branding-red;
-  height: 400px;
-  overflow: hidden;
-}
-
-.post-module .thumbnail img {
-  display: block;
-  width: 120%;
-  -webkit-transition: all 0.3s linear 0s;
-  -moz-transition: all 0.3s linear 0s;
-  -ms-transition: all 0.3s linear 0s;
-  -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-}
-
-.post-module .post-content {
-  position: absolute;
-  bottom: 0;
-  background: #ffffff;
-  width: 100%;
-  padding: 16px 20px 24px 20px;
-  -webkti-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  // -webkit-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  // -moz-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  // -ms-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  // -o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  // transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-
-}
-
-.post-module .post-content .title {
-  margin: 0;
-  padding: 0 0 4px;
-  color: $nav-bg;
-  font-size: 22px;
-  font-weight: 500;
-}
-.post-module .post-content .sub_title {
-  margin: 0;
-  padding: 0 0 18px;
-  color: $section-text2;
-  font-size: 16px;
-  font-weight: 400;
-}
-.post-module .post-content .description {
-  display: none;
-  color: $nav-bg;
-  font-size: 14px;
-  line-height: 1.5em;
-}
-
-.hover .post-content .description {
-  display: block !important;
-  height: auto !important;
-  opacity: 1 !important;
-}
-
-.column {
-
-  // @include omega(3n);
-  // display: inline-block;
-  padding: 0 25px;
-  margin-bottom: 60px;
-  // -webkti-box-sizing: border-box;
-  // -moz-box-sizing: border-box;
-  // box-sizing: border-box;
- 
-
-  @include media($large-screen-up){
-      @include span-columns (4);
-      padding: 0 15px;
-      @include omega(3n);
-  };
-  @include media($tablet){
-      @include span-columns (3 of 6);
-      padding: 0 15px;
-      @include omega(2n);
-  };
-  @include media($mobile){
-      @include span-columns (4);
-      padding: 0 25px;
-      margin-bottom: 40px;
-  };
-  transition:all .3s ease-in-out;
-  -webkit-transition:all .3s ease-in-out;
-  -moz-transition:all .3s ease-in-out;
-  -ms-transition:all .3s ease-in-out;
-  -o-transition:all .3s ease-in-out;
-}
