--- a/source/index2.html.haml
+++ b/source/index2.html.haml
@@ -7,7 +7,7 @@ title: Inner Page
 
 .main
 	.top_wrapper
-		%img.topBG(src="/images_s/2/top_bg.jpg")
+		%img.topBG(src="images_s/2/top_bg.jpg")
 		.top_category_title
 			[THE SCIENCES]
 		.top_info_text
